...
                        android:id="@+id/login_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                style="@style/styleTextForTitle"
                android:id="@+id/adminLoginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                app:strokeColor="@color/black"
...
